you can run it from maven only with mvn clean javafx:run